# ABMkit

./: CMakeLists.txt  README.md
core/: agents.h  model.h
demo/: CMakeLists.txt
demo/src/: main.cpp
include/: boids.h  flock.h
src/: CMakeLists.txt  boids.cpp  flock.cpp  flocking_main.cpp  model.cpp
src/core/: CMakeLists.txt  agents.h  model.h
src/flock/: CMakeLists.txt  boids.cpp  boids.h  domain.cpp  domain.h  flock.cpp  flock.h
